--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,6 @@ a:hover {
 .navbar-nav {
     margin-right: 0;
 }
-.nav-link:hover {
-    color: black !important;
+.nav-item:hover {
+    color:beige;
 }
